# CannyEdgeDetection

./: CMakeLists.txt  README.md  head.h  main.cpp
